--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -41,16 +41,15 @@
   "devDependencies": {
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
-    "lightweight-charts": "4.1.0",
+    "lightweight-charts": "^5.0.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "rimraf": "^2.6.2",
-    "typescript": "~4.6.4",
-    "tslib": "~2.4.0"
+    "tslib": "~2.4.0",
+    "typescript": "~4.6.4"
   },
   "peerDependencies": {
-    "lightweight-charts": ">=4.0.0",
-    "tslib": "*",
-    "react": ">=16.8.0"
+    "react": ">=16.8.0",
+    "tslib": "*"
   }
 }
